# VietParaDiff

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
docs/: ARCHITECTURE.md  DATA_FORMAT.md  TRAINING.md  VALIDATION.md
fonts/: README.md
src/vietparadiff/: __init__.py
src/vietparadiff/cli/: download_fonts.py  evaluate.py  infer.py  prepare.py  smoke.py  synthetic.py  train.py
src/vietparadiff/data/: archetypes.py  collate.py  corpus.py  dataset.py  fonts.py  graphemes.py  manifest.py  sampler.py  synthetic.py
src/vietparadiff/models/: common.py  content.py  diffusion.py  htr.py  layout.py  pipeline.py  style.py  topology.py  unet.py  vae.py
src/vietparadiff/training/: checkpoint.py  stages.py  trainer.py
src/vietparadiff/utils/: config.py  device.py  image.py  metrics.py  seed.py
tests/: test_core.py
